[package]
name = "tokens-analysis"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
base64 = "0.22"
bs58 = "0.5"
chrono = "0.4"
clap = { version = "4", features = ["derive", "env"] }
curve25519-dalek = "4"
ed25519-dalek = "2"
sha2 = "0.10"
futures = "0.3"
indicatif = "0.17"
ratatui = "0.29"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
